﻿Revision history for {{$dist->name}}

{{$NEXT}}

1.2.1 2012-02-27T05:12:12Z
 [Dependencies::Changed]
 - runtime requires : Dist::Zilla::Plugin::MetaProvides
   1.12044518 -> 1.14000000
 - runtime requires : Dist::Zilla::Plugin::MetaProvides::Package
   1.11044404 -> 1.14000001
 - runtime requires : Dist::Zilla::Plugin::MetaData::BuiltWith
   0.01014716 -> 0.02000100

 [Dependencies::New]
 - runtime requires : Test::Perl::Critic

 [Packaging]
 - Update LICENSE (Year, Indent)

1.2.0 2011-11-05T06:33:40Z
 [Dependencies]
 - changed: develop sugggests Dist::Zilla::PluginBundle::Author::KENTNL
   v1.1.0 -> v1.2.0
 - removed: runtime requires Dist::Zilla::Plugin::AutoVersion::Relative

 [Features]
 - Removed twitter-only mode.
 - removed support for autoversion. Git versions now mandatory.

 [Internals]
 - Reorganised plugin configuration.

1.1.1 2011-10-31T04:25:07Z
 [Dependencies]
 - new: Dist::Zilla::Plugin::Test::MinimumVersion

1.1.0 2011-10-30T18:18:21Z
 [Dependencies]
 - new: runtime requires Dist::Zilla::Plugin::MinimumPerl
 - new: runtime requires perl 5.10.0
 - new: runtime requires version
 - new: runtime requires Pod::Weaver::Plugin::Encoding

 [Features]
 - All newly minted dists get [-Encoding] for free
 - All dists now get xt/minimum-version.t
 - All dists will have their Perl's set to 5.10 if they are 3-part.
 - New dists will dep on 1.1.0
 - Existing dists will suggest 1.1.0

 [Packages]
 - new: Dist::Zilla::Plugin::Author::KENTNL::MinimumPerl, contains an
   additional 3-part version check that forces Perl 5.10.0

 [Packaging]
 - Reformated Props list.
 - Wrap method names in C<>
 - Encoding POD lines added.

 [Tests]
 - new: xt/release/minimum-version.t

1.0.22 2011-10-07T21:14:49Z
 [Dependencies]
 - Added dependency on Dist::Zilla::Plugin::Twitter at version 0.011 for
   TRIAL support. ( 1.0.21-source-2-gca0180a )

 [Internals]
 - Now properly creates non-broken URI's on -TRIAL releases.
   ( 1.0.21-source-2-gca0180a )

1.0.21 2011-09-10T20:26:52Z