@@ -1,4 +1,3 @@
-use 5.010000;
 use strict;
 use warnings;
 
@@ -16,6 +15,12 @@ has 'detected_perl' => (
   is         => 'rw',
   isa        => 'Object',
   lazy_build => 1,
+);
+
+has 'fiveten' => (
+  isa     => 'Bool',
+  is      => 'rw',
+  default => sub { undef },
 );
 
 sub _3part_check {
@@ -37,7 +42,7 @@ sub _3part_check {
     my $v = eval $versiondecl;
     if ( $v =~ /\A\d+[.]\d+[.]/msx ) {
       $minver = $perl_required;
-      $self->log_debug( [ 'Upgraded to 5.10 due to %s having x.y.z', $file->name ] );
+      $self->log_debug( [ 'Upgraded to %s due to %s having x.y.z', $minver, $file->name ] );
     }
   }
   return $minver;
@@ -63,9 +68,16 @@ sub _build_detected_perl {
       $self->log_fatal( [ 'Unable to extract MinimumPerl from \'%s\'', $file->name ] );
     }
     if ( ( not defined $minver ) or $ver > $minver ) {
+      $self->log_debug( [ 'Increasing perl dep to %s due to %s', $ver, $file->name ] );
       $minver = $ver;
     }
-    $minver = $self->_3part_check( $file, $pmv, $minver );
+    if ( $self->fiveten ) {
+      $ver = $self->_3part_check( $file, $pmv, $minver );
+      if ( "$ver" ne "$minver" ) {
+        $self->log_debug( [ 'Increasing perl dep to %s due to 3-part in %s', $ver, $file->name ] );
+        $minver = $ver;
+      }
+    }
   }
 
   # Write out the minimum perl found
